# chilsonite-main

./: Cargo.toml  LICENSE  README.md  chilsonite.toml
.github/workflows/: ci.yaml  deploy.yaml  sync.yaml
agent/: Cargo.toml
agent/src/: command.rs  init.rs  main.rs  tcp.rs  ws.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/types/: mod.rs  payload.rs
cserver/: Cargo.toml
cserver/.sqlx/: query-4ce175f88fd8717ee1d9b24a2a4e26bc30e3ec453d2d850301af421de70d9de8.json  query-572503e913eb6b6c33b293e9aa8108c5211a9a814cc19ae89c980d261a37f285.json  query-ad6cb2fbe04752ab6f4cf9fb7c0bf00c7fb9539cf44273bf84df734956ced204.json  query-b065487a3179e60e27b71b0392812ee363ecf15ba74a2b30fe538a8d2e0bafad.json  query-e2bb5888b9d395e6e1d75d5be4caec694c8396c6bc709065704eba1b9b53e04a.json  query-e682a19c80a187a9d0742e6aec6ac74793140b1576460c6147f0f94c6b3955ba.json
cserver/src/: agent.rs  api.rs  config.rs  main.rs  repository.rs  socks5.rs  token.rs  websocket.rs
cserver/src/api/: dto.rs
cserver/src/migrations/: 20250425051805_create_tables.sql
