[package]
name = "cserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2",  default-features = false, features = ["rustls-tls-webpki-roots"] }
base64 = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
anyhow = "1.0.95"
uuid = { version = "1.16.0", features = ["rng", "serde", "std", "v7"] }
rand = "0.9.0"
dashmap = "6.1.0"
log = "0.4.25"
env_logger = "0.11.6"
url = "2.5.4"
config = "0.15.8"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["cookie"] }
cookie = "0.16"
chrono = { version = "0.4.40", features = ["serde"] }
hyper = "1.6.0"
tokio-stream = "0.1.17"
encoding_rs = "0.8.35"
sqlx = { version = "0.8.5", features = ["chrono", "migrate", "postgres",  "uuid", "macros", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
jsonwebtoken = "8"
argon2 = "0.4"
rand_core = "0.9.3"
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
ureq = { version = "3.0.11", features = ["rustls"] }
